# face-detector-snap

./: .gitignore  README.md  roslaunch.wrapper  snapcraft.yaml
src/face_detector/: CMakeLists.txt  package.xml
src/face_detector/launch/: face_detector.launch
src/face_detector/src/: main.cpp
